@@ -21,6 +21,8 @@ Minor Changes:
  * The matching code no longer matches players who aren't nearby with
    "*playername" when MAT_NEAR is given, more in line with other checks.
    (This has virtually no impact for most players.) [MG]
+ * The internal pe_info (which manages the function invocation limit, among
+   other things) is now managed per-queue, not per-command argument. [MG]
 
 Commands:
  * Add /preserve switch to @chzone and @chzoneall, like @chown/preserve.
