@@ -158,6 +158,9 @@ int process_expression(char *buff, char **bp, char const **str,
                        dbref executor, dbref caller, dbref enactor,
                        int eflags, int tflags, PE_Info *pe_info);
 
+PE_Info * make_pe_info();
+void free_pe_info();
+
 /* buff is a pointer to a BUFFER_LEN string to contain the expression
  * result.  *bp is the point in buff at which the result should be written.
  * *bp will be updated to point one past the result of the expression,
