@@ -36,10 +36,6 @@ enum itemfun_op { IF_DELETE, IF_REPLACE, IF_INSERT };
 static void do_itemfuns(char *buff, char **bp, char *str, char *num,
                         char *word, char *sep, enum itemfun_op flag);
 
-char *iter_rep[MAX_ITERS];  /**< itext values */
-int iter_place[MAX_ITERS];  /**< inum numbers */
-int inum = 0;               /**< iter depth */
-int inum_limit = 0;         /**< limit of iter depth */
 extern const unsigned char *tables;
 
 /** Convert list to array.
@@ -2217,7 +2213,7 @@ FUNCTION(fun_iter)
   const char *replace[2];
 
 
-  if (inum >= MAX_ITERS) {
+  if (pe_info->iter_nesting >= MAX_ITERS) {
     safe_str(T("#-1 TOO MANY ITERS"), buff, bp);
     return;
   }
@@ -2260,8 +2256,8 @@ FUNCTION(fun_iter)
     return;
   }
 
-  inum++;
-  place = &iter_place[inum];
+  pe_info->iter_nesting++;
+  place = &pe_info->iter_inum[pe_info->iter_nesting];
   *place = 0;
   funccount = pe_info->fun_invocations;
   oldbp = *bp;
@@ -2270,7 +2266,7 @@ FUNCTION(fun_iter)
       safe_str(outsep, buff, bp);
     }
     *place = *place + 1;
-    iter_rep[inum] = tbuf1 = split_token(&lp, sep);
+    pe_info->iter_itext[pe_info->iter_nesting] = tbuf1 = split_token(&lp, sep);
     replace[0] = tbuf1;
     replace[1] = unparse_integer(*place);
     tbuf2 = replace_string2(standard_tokens, replace, args[1]);
@@ -2289,8 +2285,8 @@ FUNCTION(fun_iter)
     mush_free(tbuf2, "replace_string.buff");
   }
   *place = 0;
-  iter_rep[inum] = NULL;
-  inum--;
+  pe_info->iter_itext[pe_info->iter_nesting] = NULL;
+  pe_info->iter_nesting--;
   mush_free(outsep, "string");
   mush_free(list, "string");
 }
@@ -2298,7 +2294,7 @@ FUNCTION(fun_iter)
 /* ARGSUSED */
 FUNCTION(fun_ilev)
 {
-  safe_integer(inum - 1, buff, bp);
+  safe_integer(pe_info->iter_nesting, buff, bp);
 }
 
 /* ARGSUSED */
@@ -2312,12 +2308,12 @@ FUNCTION(fun_itext)
   }
   i = parse_integer(args[0]);
 
-  if (i < 0 || i >= inum || (inum - i) <= inum_limit) {
+  if (i < 0 || i > pe_info->iter_nesting || (pe_info->iter_nesting - i) < 0) {
     safe_str(T("#-1 ARGUMENT OUT OF RANGE"), buff, bp);
     return;
   }
 
-  safe_str(iter_rep[inum - i], buff, bp);
+  safe_str(pe_info->iter_itext[pe_info->iter_nesting - i], buff, bp);
 }
 
 /* ARGSUSED */
@@ -2331,12 +2327,12 @@ FUNCTION(fun_inum)
   }
   i = parse_integer(args[0]);
 
-  if (i < 0 || i >= inum || (inum - i) <= inum_limit) {
+  if (i < 0 || i > pe_info->iter_nesting || (pe_info->iter_nesting - i) < 0) {
     safe_str(T("#-1 ARGUMENT OUT OF RANGE"), buff, bp);
     return;
   }
 
-  safe_integer(iter_place[inum - i], buff, bp);
+  safe_integer(pe_info->iter_inum[pe_info->iter_nesting - i], buff, bp);
 }
 
 /* ARGSUSED */
